--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3119,6 +3119,7 @@ html {
   }
   .btn-primary {
     color: #ffffff;
+    align: center;
     background-color: #2fa4e7;
     border-color: #2fa4e7;
   }
